<resources>
    <string name="app_name">WorkMaterial</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="photo_of_the_day_stub">Фото дня</string>
    <string name="search_wiki">Поиск в википедии</string>
    <string name="earth">Земля</string>
    <string name="mars">Марс</string>
    <string name="home">Домой</string>
    <string name="standart_theme">Стандартная тема</string>
    <string name="space_theme">Тема космоса</string>
    <string name="moon_theme">Лунная тема</string>
    <string name="start_custom">Настройки</string>
    <string name="set_data">показать фото дня за сколько дней назад</string>
    <string name="last_image_day">Архив</string>
    <string name="moon">Луна</string>
    <string name="foto">Фото</string>
    <string name="search_internet">Поиск фото в Интернете</string>
    <string name="notes">Заметки</string>
    <string name="recycler_view_title">Заметки</string>
    <string name="add_note">Добавить заметку</string>
    <string name="title">Заголовок</string>
    <string name="content">Содержание</string>
    <string name="update_note">Сохранить заметку</string>
    <string name="delete_note">Удалить замету</string>
    <string name="title_activity_splash">SplashActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
</resources>