<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/home_start"
        android:title="@string/home"
        android:icon="@drawable/ic_home"
        app:labelVisibilityMode="labeled"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/image_earth"
        android:title="@string/earth"
        android:icon="@drawable/ic_earth"
        app:labelVisibilityMode="labeled"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/image_notes"
        android:title="@string/notes"
        android:icon="@drawable/ic_notes"
        app:labelVisibilityMode="labeled"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/image_search"
        android:title="@string/foto"
        android:icon="@drawable/ic_search"
        app:labelVisibilityMode="labeled"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/image_last_day"
        android:icon="@drawable/ic_send"
        android:title="@string/last_image_day"
        app:labelVisibilityMode="labeled"
        app:showAsAction="ifRoom"/>

</menu>