<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/botton_sheet"
    tools:context=".ui.AddNoteFragment">

    <EditText
        android:id="@+id/title_note_add"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/yellow"
        android:hint="@string/title"
        android:textSize="@dimen/margin_twin"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/content_note_add"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:hint="@string/content"
        android:textSize="@dimen/margin_full"
        app:layout_constraintTop_toBottomOf="@+id/title_note_add" />

    <Button
        android:id="@+id/save_note"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/add_note"
        app:layout_constraintTop_toBottomOf="@+id/content_note_add" />

</androidx.constraintlayout.widget.ConstraintLayout>