<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.CustomFragment">
    <Button
        android:id="@+id/standart_theme"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/margin_half"
        android:text="@string/standart_theme"
        tools:ignore="MissingConstraints" />

    <Button
        android:id="@+id/space_theme"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/margin_half"
        android:text="@string/space_theme"
        app:layout_constraintTop_toBottomOf="@+id/standart_theme"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="0dp" />

    <Button
        android:id="@+id/moon_theme"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/margin_half"
        android:text="@string/moon_theme"
        app:layout_constraintTop_toBottomOf="@+id/space_theme"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="0dp" />

</androidx.constraintlayout.widget.ConstraintLayout>